--- a/index.html
+++ b/index.html
@@ -9,170 +9,6 @@
 </head>
 <body>
 
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-sm-3 col-md-4 col-lg-2">-->
-<!--<a href="#" class="thumbnail" data-toggle="modal" data-target="#okienkoModal">-->
-<!--<img src="http://placekitten.com/500/500?image=1" class="img-responsive" alt=""/>-->
-<!--</a>-->
-<!--</div>-->
-<!--<div class="col-sm-3 col-md-4 col-lg-2">-->
-<!--<a href="#" class="thumbnail" data-toggle="modal" data-target="#inneOkienkoModal">-->
-<!--<img src="http://placekitten.com/500/500?image=2" class="img-responsive" alt=""/>-->
-<!--</a>-->
-<!--</div>-->
-<!--<div class="col-sm-3 col-md-4 col-lg-2">-->
-<!--<a href="#" class="thumbnail" data-toggle="modal" data-target="#okienkoModal">-->
-<!--<img src="http://placekitten.com/500/500?image=3" class="img-responsive" alt=""/>-->
-<!--</a>-->
-<!--</div>-->
-<!--<div class="col-sm-3 col-md-4 col-lg-2">-->
-<!--<a href="#" class="thumbnail" data-toggle="modal" data-target="#inneOkienkoModal">-->
-<!--<img src="http://placekitten.com/500/500?image=4" class="img-responsive" alt=""/>-->
-<!--</a>-->
-<!--</div>-->
-<!--<div class="col-sm-3 col-md-4 col-lg-2">-->
-<!--<a href="#" class="thumbnail" data-toggle="modal" data-target="#okienkoModal">-->
-<!--<img src="http://placekitten.com/500/500?image=5" class="img-responsive" alt=""/>-->
-<!--</a>-->
-<!--</div>-->
-<!--<div class="col-sm-3 col-md-4 col-lg-2">-->
-<!--<a href="#" class="thumbnail" data-toggle="modal" data-target="#inneOkienkoModal">-->
-<!--<img src="http://placekitten.com/500/500?image=6" class="img-responsive" alt=""/>-->
-<!--</a>-->
-<!--</div>-->
-<!--</div>-->
-
-
-<!--<div class="col-sm-6 col-sm-offset-4">-->
-<!--<div class="btn-group">-->
-<!--<button type="button" class="kotek1 btn btn-success btn-lg"-->
-<!--data-loading-text="<img src='loader.gif' /> Otwieram duzą kicię 1">Otwórz modal 1-->
-<!--</button>-->
-
-<!--<button type="button" class="kotek2 btn btn-danger btn-lg"-->
-<!--data-loading-text="<img src='loader.gif' />  Otwieram duzą kicię 2">Otwórz modal 2-->
-<!--</button>-->
-<!--</div>-->
-<!--</div>-->
-
-<!--</div>-->
-
-
-<!--<div class="flip-container" ontouchstart="this.classList.toggle('hover');">-->
-<!--<div class="flipper">-->
-<!--<div class="front">-->
-<!--&lt;!&ndash; front content &ndash;&gt;-->
-<!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. A autem blanditiis, consectetur culpa cupiditate-->
-<!--est harum inventore itaque, minus necessitatibus praesentium quaerat quas quibusdam repellendus sapiente-->
-<!--tenetur ullam. Molestias, mollitia?-->
-<!--</div>-->
-<!--<div class="back">-->
-<!--&lt;!&ndash; back content &ndash;&gt;-->
-<!--NICNICNICNIC-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-
-
-<!--div id="f1_container">-->
-<!--<div id="f1_card" class="shadow">-->
-<!--<div class="front face">-->
-<!--<img src="/images/Windows%20Logo.jpg"/>-->
-<!--</div>-->
-<!--<div class="back face center">-->
-<!--<p>This is nice for exposing more information about an image.</p>-->
-<!--<p>Any content can go here.</p>-->
-<!--</div>-->
-<!--</div>-->
-
-
-<!--&lt;!&ndash; Modal &ndash;&gt;-->
-<!--<div class="modal fade" id="okienkoModal">-->
-<!--<div class="modal-dialog" role="document">-->
-<!--<div class="modal-content">-->
-<!--<div class="modal-header">-->
-<!--<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>-->
-<!--</button>-->
-<!--<h4 class="modal-title" id="myModalLabel">Duża Kicia</h4>-->
-<!--</div>-->
-<!--<div class="modal-body">-->
-<!--<img src="http://placekitten.com/800/800?image=0" class="img-responsive" alt=""/>-->
-<!--</div>-->
-<!--<div class="modal-footer">-->
-<!--<button type="button" class="btn btn-default" data-dismiss="modal">Zamknij kicie</button>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-
-<!--&lt;!&ndash; Modal2 &ndash;&gt;-->
-<!--<div class="modal fade" id="inneOkienkoModal">-->
-<!--<div class="modal-dialog" role="document">-->
-<!--<div class="modal-content">-->
-<!--<div class="modal-header">-->
-<!--<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>-->
-<!--</button>-->
-<!--<h4 class="modal-title" id="myModalLabel">Inna Duża Kicia</h4>-->
-<!--</div>-->
-<!--<div class="modal-body">-->
-<!--<img src="http://placekitten.com/800/800?image=1" class="img-responsive" alt=""/>-->
-<!--</div>-->
-<!--<div class="modal-footer">-->
-<!--<button type="button" class="btn btn-default" data-dismiss="modal">Zamknij kicie</button>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-
-<!--<button class="btn btn-default signUp" type="submit" data-loading-text="Zapisuję">Zapisz się</button>-->
-<!--</span>-->
-
-<!--<script src="bootstrap/jquery.min.js"></script>-->
-<!--<script src="bootstrap/bootstrap.min.js"></script>-->
-
-<!--<script>-->
-<!--$('.kotek1').on('click', function () {-->
-<!--var $this = $(this);-->
-
-<!--$this.button('loading');-->
-<!--setTimeout(function () {-->
-<!--$('#okienkoModal').modal('show')-->
-<!--$this.button('reset');-->
-<!--}, 1000);-->
-<!--});-->
-
-<!--$('.kotek2').on('click', function () {-->
-<!--var $this = $(this);-->
-
-<!--$this.button('loading');-->
-<!--setTimeout(function () {-->
-<!--$('#inneOkienkoModal').modal('show')-->
-<!--$this.button('reset');-->
-<!--}, 1000);-->
-<!--});-->
-<!--</script>-->
-
-<!--<script>-->
-<!--$('.signUp').on('click', function () {-->
-<!--var $this = $(this);-->
-
-<!--$this.button('loading');-->
-<!--setTimeout(function () {-->
-<!--$('#okienkoModal').modal('show')-->
-<!--$this.button('reset');-->
-<!--}, 1000);-->
-<!--});-->
-<!--</script>-->
-
-
-<!--<div class="card-container">-->
-    <!--<div class="card">-->
-        <!--<div class="side"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/29841/jimmy.jpg" alt="Jimmy Eat World">-->
-        <!--</div>-->
-        <!--<div class="side back">Jimmy Eat World</div>-->
-    <!--</div>-->
-<!--</div>-->
 
 <div class="author">
     <div class="author card-container">
@@ -197,6 +33,168 @@
         <span class="function">Scrum Master / Html / Css / Java Script</span>
     </div>
 </div>
+
+
+<!--<div class="authors">-->
+    <!--<h1>Autorzy:</h1>-->
+    <!--<div class="authorsPosition">-->
+        <!--<div class="author">-->
+            <!--<div class="authorInfo card-container">-->
+                <!--<div class=" card">-->
+                    <!--<div class="side">-->
+                        <!--&lt;!&ndash;<img class="photo" src="images/joda2.png" alt="Marcin Bich"><br>&ndash;&gt;-->
+                        <!--<img src="images/user.png" alt="USER">-->
+                        <!--&lt;!&ndash;<i class="glyphicon glyphicon-user photo"></i>&ndash;&gt;-->
+                    <!--</div>-->
+                    <!--<div class="side back">-->
+                        <!--<a href=""><img class="icon" src="images/homepage.png" alt="www" title="www"></a>-->
+                        <!--<a href=""><img class="icon" src="images/email.png" alt="e-mail" title="E-mail"></a>-->
+                        <!--<a href=""><img class="icon" src="images/facebook.png" alt="facebook" title="Facebook"></a>-->
+                        <!--<a href=""><img class="icon" src="images/twitter.png" alt="twitter" title="Twitter"></a>-->
+                        <!--<a href=""><img class="icon" src="images/instagram.png" alt="instagram" title="Instagram"></a>-->
+                        <!--<a href=""><img class="icon" src="images/google.png" alt="google+" title="Google+"></a>-->
+                        <!--<a href=""><img class="icon" src="images/linkedin.png" alt="linkedin" title="LinkedIn"></a>-->
+                        <!--<a href=""><img class="icon" src="images/github.png" alt="github" title="GitHub"></a>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<span class="name">Marcin Bich</span><br>-->
+                <!--<span class="function">Scrum Master / Html / Css / Java Script</span>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="author">-->
+            <!--<div class="authorInfo">-->
+                <!--<img class="photo" src="images/r2d2.jpeg" alt="Andrzej Kublicki"><br>-->
+                <!--<span class="name">Andrzej Kublicki</span><br>-->
+                <!--<span class="function">Html / Css / Java Script</span>-->
+            <!--</div>-->
+            <!--<div class="icons">-->
+                <!--<a href=""><img class="icon" src="images/homepage.png" alt="www" title="www"></a>-->
+                <!--<a href=""><img class="icon" src="images/email.png" alt="e-mail" title="E-mail"></a>-->
+                <!--<a href=""><img class="icon" src="images/facebook.png" alt="facebook" title="Facebook"></a>-->
+                <!--<a href=""><img class="icon" src="images/twitter.png" alt="twitter" title="Twitter"></a>-->
+                <!--<a href=""><img class="icon" src="images/instagram.png" alt="instagram" title="Instagram"></a>-->
+                <!--<a href=""><img class="icon" src="images/google.png" alt="google+" title="Google+"></a>-->
+                <!--<a href=""><img class="icon" src="images/linkedin.png" alt="linkedin" title="LinkedIn"></a>-->
+                <!--<a href=""><img class="icon" src="images/github.png" alt="github" title="GitHub"></a>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="author">-->
+            <!--<div class="authorInfo">-->
+                <!--<img class="photo" src="images/c3po.jpeg" alt="Arkadiusz Oleksik"><br>-->
+                <!--<span class="name">Arkadiusz Oleksik</span><br>-->
+                <!--<span class="function">Html / Css / Java Script</span>-->
+            <!--</div>-->
+            <!--<div class="icons">-->
+                <!--<a href=""><img class="icon" src="images/homepage.png" alt="www" title="www"></a>-->
+                <!--<a href=""><img class="icon" src="images/email.png" alt="e-mail" title="E-mail"></a>-->
+                <!--<a href=""><img class="icon" src="images/facebook.png" alt="facebook" title="Facebook"></a>-->
+                <!--<a href=""><img class="icon" src="images/twitter.png" alt="twitter" title="Twitter"></a>-->
+                <!--<a href=""><img class="icon" src="images/instagram.png" alt="instagram" title="Instagram"></a>-->
+                <!--<a href=""><img class="icon" src="images/google.png" alt="google+" title="Google+"></a>-->
+                <!--<a href=""><img class="icon" src="images/linkedin.png" alt="linkedin" title="LinkedIn"></a>-->
+                <!--<a href=""><img class="icon" src="images/github.png" alt="github" title="GitHub"></a>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="author">-->
+            <!--<div class="authorInfo">-->
+                <!--<img class="photo" src="images/obi.jpg" alt="Marcin Stankowaki"><br>-->
+                <!--<span class="name">Marcin Stankowski</span><br>-->
+                <!--<span class="function">Graphic / Html / Css /<br> Java Script</span>-->
+            <!--</div>-->
+            <!--<div class="icons">-->
+                <!--<a href=""><img class="icon" src="images/homepage.png" alt="www" title="www"></a>-->
+                <!--<a href=""><img class="icon" src="images/email.png" alt="e-mail" title="E-mail"></a>-->
+                <!--<a href=""><img class="icon" src="images/facebook.png" alt="facebook" title="Facebook"></a>-->
+                <!--<a href=""><img class="icon" src="images/twitter.png" alt="twitter" title="Twitter"></a>-->
+                <!--<a href=""><img class="icon" src="images/instagram.png" alt="instagram" title="Instagram"></a>-->
+                <!--<a href=""><img class="icon" src="images/google.png" alt="google+" title="Google+"></a>-->
+                <!--<a href=""><img class="icon" src="images/linkedin.png" alt="linkedin" title="LinkedIn"></a>-->
+                <!--<a href=""><img class="icon" src="images/github.png" alt="github" title="GitHub"></a>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
+
+<!--JEDi-->
+
+<!--<div class="authors container">-->
+    <!--<h1 class="col-xs-12">Autorzy:</h1>-->
+    <!--<div class="author col-xs-12 col-sm-6 col-md-3">-->
+        <!--<div class="authorInfo card-container center-block text-center">-->
+            <!--<div class=" card">-->
+                <!--<div class="side">-->
+                    <!--<img class="starW img-rounded" src="images/yoda2.png" alt="Marcin Bich">-->
+                <!--</div>-->
+                <!--<div class="side back container-fluid">-->
+                    <!--<div class="iconPosition">-->
+                        <!--<a href=""><img class="icon" src="images/email.png" alt="e-mail" title="E-mail"></a>-->
+                        <!--<a href=""><img class="icon" src="images/facebook.png" alt="facebook" title="Facebook"></a>-->
+                        <!--<a href=""><img class="icon" src="images/github.png" alt="github" title="GitHub"></a>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<span class="name">Marcin Bich</span><br>-->
+            <!--<span class="function">Scrum Master / Html / Css / Java Script</span>-->
+        <!--</div>-->
+    <!--</div>-->
+
+    <!--<div class="author col-xs-12 col-sm-6 col-md-3">-->
+        <!--<div class="authorInfo card-container center-block text-center">-->
+            <!--<div class=" card">-->
+                <!--<div class="side">-->
+                    <!--<img class="starW img-rounded" src="images/anakin.png" alt="Andrzej Kublicki">-->
+                <!--</div>-->
+                <!--<div class="side back container-fluid">-->
+                    <!--<div class="iconPosition">-->
+                        <!--<a href=""><img class="icon" src="images/email.png" alt="e-mail" title="E-mail"></a>-->
+                        <!--<a href=""><img class="icon" src="images/facebook.png" alt="facebook" title="Facebook"></a>-->
+                        <!--<a href=""><img class="icon" src="images/github.png" alt="github" title="GitHub"></a>-->
+                        <!--<i class="fa fa-facebook" aria-hidden="true"></i>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<span class="name">Andrzej Kublicki</span><br>-->
+            <!--<span class="function">Html / Css / Java Script</span>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<div class="author col-xs-12 col-sm-6 col-md-3">-->
+        <!--<div class="authorInfo card-container center-block text-center">-->
+            <!--<div class=" card">-->
+                <!--<div class="side">-->
+                    <!--<img class="starW img-rounded" src="images/luke3.png" alt="Arkadiusz Oleksik">-->
+                <!--</div>-->
+                <!--<div class="side back container-fluid">-->
+                    <!--<div class="iconPosition">-->
+                        <!--<a href=""><img class="icon" src="images/email.png" alt="e-mail" title="E-mail"></a>-->
+                        <!--<a href=""><img class="icon" src="images/facebook.png" alt="facebook" title="Facebook"></a>-->
+                        <!--<a href=""><img class="icon" src="images/github.png" alt="github" title="GitHub"></a>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<span class="name">Arkadiusz Oleksik</span><br>-->
+            <!--<span class="function">Html / Css / Java Script</span>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<div class="author col-xs-12 col-sm-6 col-md-3">-->
+        <!--<div class="authorInfo card-container center-block text-center">-->
+            <!--<div class=" card">-->
+                <!--<div class="side">-->
+                    <!--&lt;!&ndash;<img src="images/user.png" alt="Marcin Stankowski">&ndash;&gt;-->
+                    <!--<img class="starW img-rounded" src="images/obi3.png" alt="Marcin Stankowski">-->
+                <!--</div>-->
+                <!--<div class="side back container-fluid">-->
+                    <!--<div class="iconPosition">-->
+                        <!--<a href=""><img class="icon" src="images/email.png" alt="e-mail" title="E-mail"></a>-->
+                        <!--<a href=""><img class="icon" src="images/facebook.png" alt="facebook" title="Facebook"></a>-->
+                        <!--<a href=""><img class="icon" src="images/github.png" alt="github" title="GitHub"></a>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<span class="name">Marcin Stankowski</span><br>-->
+            <!--<span class="function">Graphic / Html / Css /<br> Java Script</span>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 
 </body>
 </html>
